# mineralmatrix

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/manifests/geology/: nsw_geology_manifest.json
data/manifests/mineral_occurrences/: nsw_occurrences_manifest.json
data/synthetic/: synthetic_drillholes_v1.csv  synthetic_drillholes_v2.csv
docs/: aoi_decision.md  roadmap.md
frontend/: index.html
src/mineralmatrix/: config.py
src/mineralmatrix/api/: main.py
src/mineralmatrix/ingestion/: manifest.py  manifest_cli.py
src/mineralmatrix/schema_registry/: registry.py  validator.py
src/mineralmatrix/standardization/: drillholes.py
tests/unit/: test_config.py  test_drillhole_standardization.py  test_generated_occurrences_manifest.py  test_health.py  test_manifest.py  test_manifest_cli.py  test_sample_manifest_file.py  test_schema_registry.py  test_schema_validator.py  test_synthetic_drillhole_files.py
