[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mineralmatrix"
version = "0.1.0"
description = "End-to-end geospatial mineral targeting data platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "geopandas>=1.0",
  "rasterio>=1.4",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pyarrow>=17.0",
  "openpyxl>=3.1",
  "python-dotenv>=1.0",
  "shapely>=2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "httpx>=0.28",
  "ruff>=0.6",
  "mypy>=1.11"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
